feat: improve token & location API